# musictui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: settings.json
docs/superpowers/plans/: 2026-03-27-terminal-music-player-phase1.md  2026-03-28-e2e-test-implementation.md  2026-03-30-musictui-refactor-plan.md
docs/superpowers/specs/: 2026-03-27-terminal-music-player-design.md  2026-03-28-e2e-test-design.md  2026-03-30-musictui-refactor-design.md
src/: __main__.py  app.py  config.py  library.py  models.py  player.py
src/musictui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/theme/: __init__.py  base.py  manager.py
src/theme/themes/: __init__.py  dracula.py  monokai.py  nord.py
src/ui/: __init__.py  command_input.py  main_screen.py  player_bar.py  queue.py  search.py  settings.py  sidebar.py  status_bar.py  track_list.py
src/ui/views/: __init__.py  main_view.py
tests/: conftest.py  test_command_input.py  test_config.py  test_library.py  test_models.py  test_player.py  test_player_bar.py  test_player_enhanced.py  test_queue.py  test_search.py  test_settings.py  test_sidebar.py  test_track_list.py  test_track_table.py  test_url_loader.py
tests/e2e/: README.md  conftest.py  test_app_flow.py  test_blacklist.py  test_command_input.py  test_favorites.py  test_integration.py  test_pagination.py  test_player_controls.py  test_player_enhanced.py  test_queue.py  test_remote_url.py  test_search.py  test_settings.py  test_sidebar.py  test_volume.py
(+5 files in other folders)
